[package]
name = "blockchain-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
chrono = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16"
rayon = "1.5"
libp2p = "0.41"
futures = "0.3"
dotenv = "0.15"
structopt = "0.3"
