[package]
name = "blockchain-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
chrono = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16"
rayon = "1.5"
libp2p = {version = "0.41", features = ["tcp-tokio", "mdns"]}
tokio = { version = "1.0.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }
futures = {version = "0.3", features = []}
structopt = "0.3"
