[package]
name = "garden"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "garden-client"
path = "src/bin/client.rs"

[[bin]]
name = "garden-game"
path = "src/bin/game.rs"

[[bin]]
name = "garden-cat"
path = "src/bin/cat.rs"

[dependencies]
chrono = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16"
libp2p = {version = "0.41", features = ["tcp-tokio", "mdns"]}
tokio = { version = "1.0.1", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }
futures = {version = "0.3", features = []}
structopt = "0.3"
uuid = {version = "0.8", features = ["serde", "v4"]}
num_cpus = { version = "1.13" }
bincode = "1.3"
rltk = "0.8"
num-traits = "0.2"
thiserror = "1.0"
anyhow = "1.0"
paste = "1.0"
static_assertions = "1.1"
colour = "0.6"

[dev-dependencies]
tempdir = "0.3"
insta = "1.10"
pretty_assertions = "1.1"
rand = "0.8"

[features]
# Spews a log of cache hit or miss for selectors.
selector-cache-log = []
# Spews a log of actions.
store-log = []
